[gd_scene load_steps=7 format=2]

[ext_resource path="res://Control/interface/AddQnsDetails.gd" type="Script" id=1]
[ext_resource path="res://View/basicMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Model/buttons/EditButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://View/util/customQuestionSet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Model/buttons/AddButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Xolonium_32.tres" type="DynamicFont" id=6]

[node name="World" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Header" parent="TemplateScreen" index="3"]
text = "ADD QUESTIONS"

[node name="PlayBoard" parent="." index="1"]
margin_top = 92.0
margin_right = 290.0

[node name="MarginContainer" type="MarginContainer" parent="PlayBoard" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayBoard/MarginContainer" index="0"]
margin_left = 20.0
margin_top = 20.0
margin_right = 567.0
margin_bottom = 431.0

[node name="Label" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer" index="0"]
margin_right = 547.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 6 )
text = "World N"
align = 1

[node name="Container" type="ScrollContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="1"]
margin_top = 43.0
margin_right = 547.0
margin_bottom = 411.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QnList" type="VBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer/Container" index="0"]
margin_right = 535.0
margin_bottom = 248.0
custom_constants/separation = 20

[node name="Qn1" parent="PlayBoard/MarginContainer/VBoxContainer/Container/QnList" index="0" instance=ExtResource( 4 )]
margin_bottom = 248.0

[node name="AddButton" parent="." index="4" instance=ExtResource( 5 )]
margin_left = 901.0
margin_top = 488.0
margin_right = 995.0
margin_bottom = 576.0

[node name="HTTPRequest" type="HTTPRequest" parent="." index="5"]

[node name="ConfirmButton" parent="." index="6" instance=ExtResource( 3 )]
margin_left = 897.082
margin_top = 387.629
margin_right = 999.082
margin_bottom = 475.629
[connection signal="pressed" from="AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
